# robogpt_apps

./: CMakeLists.txt  package.xml  param_reader.py  param_tester.py
applications/base/: skills.py
applications/gazebo_skills/: skills.py
applications/machine_tending/: skills.py
applications/pick_and_place/: skills.py
applications/sf_demo/: skills.py  template.txt
applications/utilities/: param_read_write.py  robot_loader.py  skill_initializers.py  utils.py
scripts/base/: skills.py
scripts/gazebo_skills/: skills.py
scripts/sf_demo/: skills.py
scripts/utilities/: robot_loader.py  skill_initializers.py
trash/: helper_services.py  skill_initializers.py
